htdocs/theme/raw/sass/_custom.scss
/* ... */
// Used to remove the second border around the legal information
#agreetoprivacy .card {
    border: 0;
}

.image-rotator {
    height: 110px;
    line-height: 75px;

    .image-rotator-inner {
        display: inline-block;
        text-align: center;
        width: 110px;
    }
}

#searchviews_matchalltags_container {
    width: 300px;
    margin-left: 5px;
    margin-top: 21px;
    label {
        margin-left: 28px;
    }
    input {
        margin-left: 3px;
        margin-top: -20px;
        float: left;
        width: auto;
        height: auto;
    }
    div {
        margin-left: 3px;
        padding-top: 0;
        span {
            padding-top: 0;
        }
    }
}

div.toolbarhtml {
    margin-top: 5px;
    clear: both;
    float: right;
    div {
        text-align: right;
    }
}

.assessment-item-buttons {
    .assessbtn + .assessbtn {
        button {
            @include border-left-radius(0);
        }
    }
}

#viewinstructions,
.peerinstructions {
    &.with-toolbar {
        margin-right: 20px;
    }
    div.fieldset-body {
        background-color: $gray-100 !important;
    }
}
.viewinstruction-export {
    border: 1px solid $card-border-color;
    padding: 10px 15px;
    margin-bottom: -1px; //remove double border
    background-color: $gray-100 !important;
}
.releaseviewform {
    position: relative;
    top: 15px;
}

.field-label-bold {
    label {
        font-weight: bold;
    }
}
#pendinglist {
    margin-bottom: 0;
}
// Stop btn links displaying as buttons
[type="button"].btn-link,
a[type="submit"],
.card-header a[type="button"] {
    -webkit-appearance: none;
}

// Used when you really only need flex on an item
.flexbox {
    display: flex;
}

// Add space when there are 2 selects next to each other
.select {
    + .select {
        margin-left: 5px;
    }
    + .submit:not(.input-group-append) {
        margin-left: 5px;
    }
}

// Removes weird text node between buttons on admin/users/suspended.php
.pieform-fieldset.btn-group {
    font-size: 0;
}

.elasticsearch-filters {
    border-bottom: 1px solid $card-border-color;
    background-color: $card-header-bg;
}

// Mostly used to make the table matrix popups work
.d-none.popover {
    visibility: hidden;
}

// Notifications search and bulk action select alignment
.form-inline {
    input {
        @extend .form-control;
        &.btn-primary {
            @extend .btn-primary;
        }
    }
}
.notification-parent {
    .bulk-actions {
        input {
            margin-top: 1px;
        }
        button {
            height: calc(2.0625rem + 2px);
        }
    }
}

// Share with me search filter
#search_share_container {
    label {
        margin-top: 13px;
    }
}

// Find groups search
#search_searchfield {
    color: $btn-primary-color;
    background-color: $btn-primary-bg;
    border: $btn-primary-border;
    border-radius: $border-radius;
    width: auto;
    margin-top: 12px;
}

// Find people results approve request alignment
.approvefriend .pieform {
    display: inline-block;
    margin-left: 3px;
    button {
        font-size: $font-size-sm;
    }
}

// Manage collections
.collection-pages {
    button.btn-sm {
        border: 0;
    }
}

// Networking delete btn
.secondary #networkingform_submit {
    background-color: $state-danger-bg;
    color: $state-danger-text;
    border-color: $state-danger-border;
    margin-left: .5rem;
}

// Web services add service groups btn
#webservices_function_groups_add_submit,
#webservices_token_generate_submit {
    width: auto;
}

// Backup for libraries that still need hidden class instead of bootstrap 4s new .d-none
.hidden {
    display: none;
}
//used for Smart Evidence json-editor
#editor_holder .bg-light {
    background-color: #FFF !important;
}

div.form-group .form-control-label {
    vertical-align: top;
}

.btn-group {
    font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
}

.json_editor_btn_add .btn-group > .btn-group:not(:last-child) > .btn, .btn-group > .btn:not(:last-child):not(.dropdown-toggle) {
    border-top-right-radius: 0.25rem;
    border-bottom-right-radius: 0.25rem;
}

.errormsg {
    color: $state-danger-text;
}

// table cells that need to be fixed 70px width
.width-70 {
    width: 70px;
}

// Forum select wrap too close to text
.forumselectwrap {
    margin: 0 0 10px 10px;
}

.form-group.checkboxes .group-invite input[type="checkbox"] {
    float: left;
    top: 0;
    margin-right: 5px;
}

// Keep content chooser on side of page when scrolling
#editcontent-sidebar-wrapper {
    position: -webkit-sticky;
    position: sticky;
    top: 200px;
}

a.online-users {
    text-align: left;
}

